[project]
name = "machinelearningspecialisation"
version = "0.1.0"
description = ""
authors = [
    {name = "Sarah"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (==2.2.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
